--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,3 +1,7 @@
+{% load static %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
+
 <h1>{{ question.quesiton_text }}</h1>
 
 <ul>
